# ipu

./: README.md  pyproject.toml
src/: ipu.py
